--- a/app/src/main/res/layout/item_groupdetail_user.xml
+++ b/app/src/main/res/layout/item_groupdetail_user.xml
@@ -1,7 +1,7 @@
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/rl_view"
     android:layout_marginLeft="12dp"
     android:layout_marginTop="12dp"
@@ -14,7 +14,7 @@
         android:layout_height="50dp"
         android:layout_gravity="center"
         android:scaleType="centerCrop"
-        android:src="@mipmap/avater"/>
+        tools:src="@mipmap/avater"/>
 
 
 
