--- a/app/src/main/res/layout/fragment_find_topic_detail.xml
+++ b/app/src/main/res/layout/fragment_find_topic_detail.xml
@@ -5,7 +5,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:boy="http://schemas.android.com/tools"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical">
 
 
@@ -43,9 +43,10 @@
                         android:padding="12dp">
 
                         <com.cinderellavip.weight.CircleImageView
+                            android:id="@+id/iv_avatar"
                             android:layout_width="35dp"
                             android:layout_height="35dp"
-                            android:src="@mipmap/avater"/>
+                            tools:src="@mipmap/avater"/>
 
                         <LinearLayout
                             android:layout_width="0dp"
@@ -55,13 +56,15 @@
                             android:orientation="vertical">
 
                             <TextView
+                                android:id="@+id/tv_name"
                                 style="@style/base_text_style"
-                                android:text="南殊陵"
+                                tools:text="南殊陵"
                                 />
 
                             <TextView
+                                android:id="@+id/tv_time"
                                 style="@style/base_text_style_gray_small"
-                                android:text="12-22 08:31:01"
+                                tools:text="12-22 08:31:01"
                                 />
                         </LinearLayout>
 
@@ -80,8 +83,9 @@
                     </LinearLayout>
 
                     <TextView
+                        android:id="@+id/tv_topic_title"
                         style="@style/base_text_style"
-                        android:text="#我的百搭神仙单品#"
+                        tools:text="#我的百搭神仙单品#"
                         android:textColor="@color/baseColor"
                         android:layout_marginLeft="12dp"
                         android:layout_marginRight="12dp"
@@ -98,8 +102,9 @@
                         android:layout_marginBottom="12dp"/>
 
                     <TextView
+                        android:id="@+id/tv_content"
                         style="@style/base_text_style"
-                        android:text="送自己的polo红系列，送自己的polo红系列，送自己的polo红系列，送自己的polo红系列，送自己的polo红系列，送自己的polo红系列，送自己的polo红系列，送自己的polo红系列，送自己的polo红系列，送自己的polo红系列，"
+                        tools:text="送自己的polo红系列，送自己的polo红系列，送自己的polo红系列，送自己的polo红系列，送自己的polo红系列，送自己的polo红系列，送自己的polo红系列，送自己的polo红系列，送自己的polo红系列，送自己的polo红系列，"
                         android:lineSpacingExtra="5dp"
                         android:layout_marginLeft="12dp"
                         android:layout_marginRight="12dp"
