--- a/app/src/main/res/layout/item_find_hottopic_search.xml
+++ b/app/src/main/res/layout/item_find_hottopic_search.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/ll_root"
     android:paddingLeft="12dp"
     android:background="@color/white"
@@ -19,7 +19,7 @@
         android:layout_marginBottom="9dp"
         android:ellipsize="end"
         android:textColor="@color/black_title_color"
-        android:text="#这双球鞋真上头#"
+        tools:text="#这双球鞋真上头#"
         />
 
     <View
