--- a/app/src/main/res/layout/item_publish_post_select_goods.xml
+++ b/app/src/main/res/layout/item_publish_post_select_goods.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/ll_root"
     android:layout_width="100dp"
     android:layout_height="wrap_content"
@@ -16,7 +16,7 @@
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:scaleType="centerCrop"
-            android:src="@mipmap/demo_cardsale_banner1" />
+            tools:src="@mipmap/demo_cardsale_banner1" />
 
         <ImageView
             android:id="@+id/iv_delete"
@@ -37,7 +37,7 @@
         android:ellipsize="end"
         android:lines="2"
         android:maxLines="2"
-        android:text="夹心口味吐司 营养早餐休闲食品"
+        tools:text="夹心口味吐司 营养早餐休闲食品"
         android:textColor="@color/black_title_color"
         android:textSize="12sp" />
 
@@ -47,7 +47,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:text="￥238"
+        tools:text="￥238"
         android:textColor="@color/baseColor"
         android:textSize="12sp" />
 
