--- a/app/src/main/res/layout/item_search_goods_for_publishpost.xml
+++ b/app/src/main/res/layout/item_search_goods_for_publishpost.xml
@@ -1,13 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
-    android:background="@color/white"
-    >
+    android:background="@color/white">
 
+    <TextView
+        android:id="@+id/tv_tip"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:ellipsize="end"
+        android:text="购买记录"
+        android:paddingLeft="12dp"
+        android:paddingTop="12dp"
+        android:textColor="@color/black_title_color"
+        android:textSize="14sp" />
 
     <LinearLayout
         android:id="@+id/ll_root"
@@ -21,7 +30,7 @@
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:scaleType="centerCrop"
-        android:src="@mipmap/demo_cardsale_banner1" />
+        tools:src="@mipmap/demo_cardsale_banner1" />
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -36,7 +45,7 @@
             android:ellipsize="end"
             android:lines="2"
             android:maxLines="2"
-            android:text="夹心口味吐司 营养早餐休闲食品夹心口味吐司 营养早餐休闲食品"
+            tools:text="夹心口味吐司 营养早餐休闲食品夹心口味吐司 营养早餐休闲食品"
             android:textColor="@color/black_title_color"
             android:textSize="14sp" />
 
@@ -45,7 +54,7 @@
             android:id="@+id/tv_price"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="￥238"
+            tools:text="￥238"
             android:textColor="@color/baseColor"
             android:textSize="14sp" />
 
