--- a/app/src/main/res/layout/item_life_service.xml
+++ b/app/src/main/res/layout/item_life_service.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/ll_root"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -16,7 +16,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:scaleType="centerCrop"
-        android:src="@mipmap/demo_life" />
+        tools:src="@mipmap/demo_life" />
 
 
     <TextView
@@ -27,7 +27,7 @@
         android:ellipsize="end"
         android:lines="1"
         android:maxLines="1"
-        android:text="物品整理"
+        tools:text="物品整理"
         android:textColor="@color/black_title_color"
         android:textSize="14sp" />
 
@@ -36,7 +36,7 @@
         android:id="@+id/tv_price"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="170元/次"
+        tools:text="170元/次"
         android:layout_marginTop="8dp"
         android:textColor="@color/baseColor"
         android:textSize="14sp" />
