--- a/app/src/main/res/layout/item_life.xml
+++ b/app/src/main/res/layout/item_life.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
     android:background="@color/white"
     android:orientation="vertical">
     <View
@@ -26,7 +26,7 @@
         <TextView
             android:id="@+id/tv_title"
             style="@style/base_text_style"
-            android:text="日常保洁"
+            tools:text="日常保洁"
             android:layout_weight="1"
             android:textStyle="bold"
             android:layout_marginLeft="10dp"
