--- a/app/src/main/res/layout/item_category_goods.xml
+++ b/app/src/main/res/layout/item_category_goods.xml
@@ -16,7 +16,7 @@
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:layout_gravity="center"
-        android:src="@mipmap/demo_category"/>
+        tools:src="@mipmap/demo_category"/>
 
     <TextView
         android:id="@+id/tv_title"
@@ -25,7 +25,7 @@
         android:layout_gravity="center"
         android:ellipsize="end"
         android:layout_height="wrap_content"
-        android:text="物品整理"
+        tools:text="物品整理"
         android:singleLine="true"
         android:textColor="@color/black_title_color"
         android:textSize="12sp"
