--- a/app/src/main/res/layout/header_service_list.xml
+++ b/app/src/main/res/layout/header_service_list.xml
@@ -1,19 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical">
 
     <com.cinderellavip.weight.ScaleImageView
+        android:id="@+id/iv_banner"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:scale="0.5492"
-        android:src="@mipmap/demo_banner_service_list"/>
+        tools:src="@mipmap/demo_banner_service_list"/>
 
     <LinearLayout
+        android:id="@+id/ll_new_person"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/white"
@@ -26,8 +28,9 @@
             android:src="@mipmap/icon_discount"/>
 
         <TextView
+            android:id="@+id/tv_coupon_name"
             style="@style/base_text_style"
-            android:text="新客首单立减30元"
+            tools:text="新客首单立减30元"
             android:textSize="12sp"
             android:layout_marginLeft="12dp"
             android:layout_weight="1"
@@ -63,7 +66,7 @@
         android:layout_marginLeft="12dp"
         android:layout_marginRight="12dp"
         app:scale="0.3777"
-        android:src="@mipmap/servicelist_banner"/>
+        tools:src="@mipmap/servicelist_banner"/>
 
 
 
