--- a/app/src/main/res/layout/pop_bottom_poster.xml
+++ b/app/src/main/res/layout/pop_bottom_poster.xml
@@ -109,9 +109,10 @@
                 android:orientation="vertical">
 
                 <ImageView
+                    android:id="@+id/iv_code"
                     android:layout_width="60dp"
                     android:layout_height="60dp"
-                    android:src="@mipmap/code"/>
+                    tools:src="@mipmap/code"/>
 
                 <TextView
                     style="@style/base_text_style_gray_small"
