--- a/app/src/main/res/layout/fragment_search_find_post.xml
+++ b/app/src/main/res/layout/fragment_search_find_post.xml
@@ -12,6 +12,7 @@
 
 
     <LinearLayout
+        android:id="@+id/ll_history"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/white"
@@ -41,44 +42,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/white"/>
-
-
-
-
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/white"
-        android:layout_marginTop="8dp"
-        android:orientation="horizontal">
-        <TextView
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="wrap_content"
-            android:text="热门搜索"
-            android:textSize="14sp"
-            android:textColor="@color/black_title_color"
-
-            android:padding="12dp"/>
-
-
-
-    </LinearLayout>
-
-
-    <com.cinderellavip.weight.FlowLayout
-        android:id="@+id/fl_hot"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/white"/>
-
-
-
-
-
-
-
 
 
 
