--- a/app/src/main/res/layout/activity_goods_detail.xml
+++ b/app/src/main/res/layout/activity_goods_detail.xml
@@ -98,10 +98,11 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="4dp">
+            >
             <TextView
                 android:id="@+id/rv_cart"
-                android:layout_width="wrap_content"
+                android:layout_width="50dp"
+                android:gravity="center"
                 android:layout_height="wrap_content"
                 android:textSize="12sp"
                 android:layout_marginLeft="5dp"
@@ -111,14 +112,13 @@
                 android:drawablePadding="2dp"
                 android:paddingTop="6dp"
                 android:paddingBottom="6dp"
-                android:paddingLeft="12dp"
-                android:paddingRight="12dp"
                 android:text="购物车"/>
             <TextView
                 android:id="@+id/tv_shop"
-                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="12sp"
+                android:layout_width="50dp"
+                android:gravity="center"
                 android:layout_marginLeft="5dp"
                 android:background="@drawable/touch_bg"
                 android:textColor="@color/grayText"
@@ -126,8 +126,6 @@
                 android:drawablePadding="2dp"
                 android:paddingTop="6dp"
                 android:paddingBottom="6dp"
-                android:paddingLeft="12dp"
-                android:paddingRight="12dp"
                 android:text="店铺"/>
 
 
@@ -136,6 +134,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_gravity="center_vertical"
+            android:layout_marginLeft="8dp"
             android:layout_height="match_parent">
 
             <LinearLayout
