--- a/app/src/main/res/layout/pop_bottom_recommend.xml
+++ b/app/src/main/res/layout/pop_bottom_recommend.xml
@@ -32,11 +32,11 @@
                 android:id="@+id/iv_avatar"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
-                android:src="@mipmap/avater"/>
+                tools:src="@mipmap/avater"/>
             <TextView
                 android:id="@+id/tv_name"
                 style="@style/base_text_style"
-                android:text="月岛tsuki"
+                tools:text="月岛tsuki"
                 android:layout_marginLeft="10dp"
                 />
             <TextView
@@ -60,7 +60,7 @@
                 android:layout_width="200dp"
                 android:layout_height="0dp"
                 android:scaleType="centerCrop"
-                android:src="@mipmap/code"/>
+                tools:src="@mipmap/code"/>
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -72,9 +72,9 @@
                     />
 
                 <TextView
-                    android:id="@+id/tv_product_name"
+                    android:id="@+id/tv_code"
                     style="@style/base_text_style"
-                    android:text="245523"
+                    tools:text="245523"
                     android:textSize="18sp"
                     />
 
