--- a/app/src/main/res/layout/activity_search_life.xml
+++ b/app/src/main/res/layout/activity_search_life.xml
@@ -101,6 +101,7 @@
         android:background="@color/white"/>
 
     <LinearLayout
+        android:id="@+id/ll_history"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/white"
