--- a/app/src/main/res/layout/activity_select_city.xml
+++ b/app/src/main/res/layout/activity_select_city.xml
@@ -20,12 +20,12 @@
         android:paddingRight="12dp"
         android:gravity="center_vertical">
         <TextView
+            android:id="@+id/tv_address"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
             android:layout_gravity="left"
             android:background="@drawable/shape_gray5"
-            android:text="上海"
             android:layout_marginLeft="12dp"
             android:drawableLeft="@mipmap/address_green"
             android:drawablePadding="5dp"
@@ -44,8 +44,10 @@
             android:layout_height="0dp"/>
 
         <LinearLayout
+            android:id="@+id/ll_refresh"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+
             android:gravity="center_vertical">
             <ImageView
                 android:layout_width="wrap_content"
@@ -56,6 +58,7 @@
                 style="@style/base_text_style"
                 android:text="重新定位"
                 android:layout_marginLeft="5dp"
+                android:textSize="12sp"
                 android:textColor="@color/yellow_deep"
                 />
         </LinearLayout>
