--- a/app/src/main/res/layout/fragment_selete_coupon_for_service.xml
+++ b/app/src/main/res/layout/fragment_selete_coupon_for_service.xml
@@ -37,7 +37,7 @@
         android:background="@color/white"
         android:layout_margin="0dp"
         android:textColor="@color/black_title_color"
-        android:text="不使用"
+        android:text="不使用优惠券"
         />
 
 
