--- a/app/src/main/res/layout/item_coupon_receive_dialog.xml
+++ b/app/src/main/res/layout/item_coupon_receive_dialog.xml
@@ -78,6 +78,7 @@
             <TextView
                 android:id="@+id/tv_use"
                 style="@style/base_btn_style"
+                android:background="@drawable/shape_yellow5_life_deep"
                 android:layout_marginLeft="12dp"
                 android:layout_marginRight="12dp"
                 android:paddingTop="3dp"
