--- a/app/src/main/res/layout/item_order_single.xml
+++ b/app/src/main/res/layout/item_order_single.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<com.cinderellavip.weight.RecycleViewRootLinearLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_marginTop="10dp"
     android:id="@+id/ll_root"
     android:background="@drawable/touch_bg"
@@ -19,7 +20,7 @@
             android:id="@+id/tv_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="服务编号:1483759861938"
+            tools:text="服务编号:1483759861938"
             android:textSize="14sp"
             android:textColor="@color/black_title_color"/>
         
@@ -32,7 +33,7 @@
             android:id="@+id/tv_status"
             style="@style/base_text_style"
             android:layout_marginLeft="12dp"
-            android:text="已取消"
+            tools:text="已取消"
             android:textColor="@color/yellow_deep"
             />
     </LinearLayout>
@@ -45,39 +46,47 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_vertical"
-        android:padding="12dp"
+        android:paddingLeft="12dp"
+        android:paddingRight="12dp"
+        android:paddingTop="8dp"
+        android:paddingBottom="12dp"
         android:orientation="horizontal">
 
        <ImageView
+           android:id="@+id/iv_image"
            android:layout_width="40dp"
            android:layout_height="40dp"
-           android:src="@mipmap/life_banner1"/>
+           tools:src="@mipmap/life_banner1"/>
         <TextView
+            android:id="@+id/tv_type"
             style="@style/base_text_style"
             android:layout_marginLeft="12dp"
-            android:text="育儿嫂"
-            android:textSize="16sp"
+            tools:text="育儿嫂"
+            android:textStyle="bold"
             android:textColor="@color/black"
             />
     </LinearLayout>
 
     <TextView
+        android:id="@+id/tv_service_type"
         style="@style/base_text_style"
         android:layout_marginLeft="12dp"
-        android:text="服务类型：育儿嫂-启蒙教育"
+        tools:text="服务类型：育儿嫂-启蒙教育"
         />
 
     <TextView
+        android:id="@+id/tv_service_time"
         style="@style/base_text_style"
         android:layout_marginLeft="12dp"
-        android:text="服务时间：2020-10-03"
+        tools:text="服务时间：2020-10-03"
         android:layout_marginTop="6dp"
         />
 
     <TextView
+        android:id="@+id/tv_service_address"
         style="@style/base_text_style"
         android:layout_marginLeft="12dp"
-        android:text="服务地址：上海市青浦区明珠路32号"
+        tools:text="服务地址：上海市青浦区明珠路32号"
         android:layout_marginTop="6dp"
         />
 
@@ -99,8 +108,9 @@
             />
 
         <TextView
+            android:id="@+id/tv_price"
             style="@style/base_text_style"
-            android:text="8000元"
+            tools:text="8000元"
             android:layout_marginLeft="5dp"
             android:textColor="@color/yellow_deep"
             />
@@ -128,4 +138,4 @@
 
 
 
-</com.cinderellavip.weight.RecycleViewRootLinearLayout>
+</LinearLayout>
