--- a/app/src/main/res/layout/activity_select_service_time.xml
+++ b/app/src/main/res/layout/activity_select_service_time.xml
@@ -26,14 +26,11 @@
             />
 
 
-
-
-   <androidx.viewpager.widget.ViewPager
-       android:id="@+id/viewpager"
-       android:layout_width="match_parent"
-       android:layout_height="0dp"
-       android:layout_weight="1"/>
-
+    <FrameLayout
+        android:id="@+id/viewpager"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1" />
 
     <TextView
         style="@style/base_text_style"
