--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -21,7 +21,7 @@
             android:background="@null"
             android:hint="输入手机号"
             android:inputType="number"
-            android:text="13166015579"
+            android:text=""
             android:maxLength="11"
             android:paddingBottom="12dp"
             android:paddingLeft="15dp"
@@ -62,7 +62,7 @@
         android:layout_marginTop="12dp"
         android:background="@drawable/shape_gray50"
         android:hint="输入登录密码"
-        android:text="123456"
+        android:text=""
         android:inputType="textPassword"
         android:maxLength="11"
         android:paddingBottom="12dp"
