规格里查看大图并下载

--- a/app/src/main/res/layout/activity_big_image.xml
+++ b/app/src/main/res/layout/activity_big_image.xml
@@ -49,16 +49,15 @@
 
     </LinearLayout>
 
-    <TextView
+    <ImageView
         android:id="@+id/tv_sava"
         style="@style/base_btn_style_large"
-        android:background="@drawable/shape_line_white5"
-        android:text="保存"
-        android:visibility="gone"
+        android:background="@mipmap/save_image"
         android:paddingLeft="25dp"
         android:paddingRight="25dp"
         android:layout_alignParentBottom="true"
-        android:layout_margin="50dp"
+        android:layout_centerHorizontal="true"
+        android:layout_margin="30dp"
         android:textColor="@color/white"
         android:textSize="12sp" />
 
